# docs/swagger.yaml
@@ -5,6 +5,11 @@ definitions:
       success:
         type: boolean
     type: object
+  authv1.ChangePasswordResponse:
+    properties:
+      success:
+        type: boolean
+    type: object
   authv1.LoginResponse:
     properties:
       access_token:
@@ -29,12 +34,29 @@ definitions:
       success:
         type: boolean
     type: object
+  authv1.SendPasswordLinkResponse:
+    properties:
+      success:
+        type: boolean
+    type: object
   entities.ActivateAccountRequest:
     properties:
       link:
         type: string
     required:
     - link
+    type: object
+  entities.ChangePasswordRequest:
+    properties:
+      link:
+        type: string
+      password:
+        maxLength: 50
+        minLength: 8
+        type: string
+    required:
+    - link
+    - password
     type: object
   entities.LoginRequest:
     properties:
@@ -80,6 +102,13 @@ definitions:
     - password
     - username
     type: object
+  entities.SendPasswordLinkRequest:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -115,6 +144,38 @@ paths:
         "503":
           description: Service Unavailable
       summary: Activate account
+      tags:
+      - Auth
+  /auth/change_password:
+    post:
+      consumes:
+      - application/json
+      description: Change password
+      operationId: Change password
+      parameters:
+      - description: password
+        in: body
+        name: password
+        schema:
+          $ref: '#/definitions/entities.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/authv1.ChangePasswordResponse'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: Change password
       tags:
       - Auth
   /auth/login:
@@ -239,6 +300,38 @@ paths:
         "503":
           description: Service Unavailable
       summary: Register
+      tags:
+      - Auth
+  /auth/send_password_link:
+    post:
+      consumes:
+      - application/json
+      description: Send password link
+      operationId: Send password link
+      parameters:
+      - description: email
+        in: body
+        name: email
+        schema:
+          $ref: '#/definitions/entities.SendPasswordLinkRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/authv1.SendPasswordLinkResponse'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: Send password link
       tags:
       - Auth
 swagger: "2.0"
